<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trayek_full"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.jakartans.activities.TrayekFullActivity">
    
	<LinearLayout 
	    android:id="@+id/ll_trayek_full_line_1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
	    <ImageView 
	        android:id="@+id/iv_trayek"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center"
		    android:layout_margin="10dp"
		    android:contentDescription="@string/hello_world"
		    android:src="@drawable/ic_jakartans"/>
	    
	    <TextView 
	        android:id="@+id/tv_name_trayek"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/hello_world"/>
	       
        <TextView 
            android:id="@+id/tv_no_trayek"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
	  		android:text="@string/hello_world"/>
	       
	</LinearLayout>
	
	<TextView 
        android:id="@+id/tv_rute_trayek"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="3dp"
	    android:text="@string/rute_trayek"/>
		
    <LinearLayout
        android:id="@+id/ll_line_2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	       
        <ImageView 
	        android:id="@+id/iv_fluent"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_margin="3dp"
		    android:contentDescription="@string/hello_world"
		    android:src="@drawable/ic_jakartans"/>
        
        <TextView 
	        android:id="@+id/tv_name_fluent"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/fluent"/>
        
        <TextView 
	        android:id="@+id/tv_rating_fluent"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/rating"/>
    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/ll_line_3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	       
        <ImageView 
	        android:id="@+id/iv_availability"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_margin="3dp"
		    android:contentDescription="@string/hello_world"
		    android:src="@drawable/ic_jakartans"/>
        
        <TextView 
	        android:id="@+id/tv_name_availability"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/fluent"/>
        
        <TextView 
	        android:id="@+id/tv_rating_availability"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/rating"/>
    
	</LinearLayout>	
	
	<LinearLayout
        android:id="@+id/ll_line_4"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	       
        <ImageView 
	        android:id="@+id/iv_jamming"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_margin="3dp"
		    android:contentDescription="@string/hello_world"
		    android:src="@drawable/ic_jakartans"/>
        
        <TextView 
	        android:id="@+id/tv_name_jamming"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/fluent"/>
        
        <TextView 
	        android:id="@+id/tv_rating_jamming"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="3dp"
		    android:text="@string/rating"/>
    
	</LinearLayout>
			
    <ListView 
        android:id="@+id/lv_status"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
    
</LinearLayout>

