<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#ededed"
	android:orientation="horizontal"
	android:padding="10dp" >

	<RelativeLayout
	    android:id="@+id/inner"
	    android:background="#fff"
	    android:padding="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ImageView
    		android:id="@+id/iv_trayek"
    		android:layout_width="50dp"
    		android:layout_height="50dp"
    		android:layout_centerVertical="true"
    		android:contentDescription="@string/hello_world"
    		android:src="@drawable/ic_jakartans" />
    
    	<LinearLayout
    		android:id="@+id/info_container"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_centerVertical="true"
    		android:layout_marginLeft="10dp"
    		android:layout_toRightOf="@+id/iv_trayek"
    		android:orientation="vertical" >
    
    		<TextView
    			android:id="@+id/tv_place"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_alignBaseline="@+id/tv_username"
    			android:layout_alignTop="@+id/tv_username"
    			android:layout_toRightOf="@+id/tv_username"
    			android:text="@string/hello_world"
    			android:textSize="16sp"
    			android:textStyle="bold" />
    
    		<TextView
    			android:id="@+id/tv_status"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:layout_alignLeft="@+id/tv_username"
    			android:layout_below="@+id/tv_username"
    			android:text="@string/rute_trayek" />
    
    		<TextView
    			android:id="@+id/tv_point"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/rating"
    			android:textSize="16sp" />
    
    		<LinearLayout
    			android:id="@+id/ic_con"
    			android:layout_marginTop="5dp"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content" >
    
    			<ImageView
    				android:id="@+id/iv_bus"
    				android:layout_width="25dp"
    				android:layout_height="25dp"
    				android:layout_alignBaseline="@+id/iv_jam"
    				android:layout_alignTop="@+id/iv_jam"
    				android:layout_toRightOf="@+id/iv_jam"
    				android:contentDescription="@string/hello_world"
    				android:src="@drawable/ic_jakartans" />
    
    			<ImageView
    				android:id="@+id/iv_jam"
    				android:layout_width="25dp"
    				android:layout_height="25dp"
    				android:layout_marginLeft="3dp"
    				android:contentDescription="@string/hello_world"
    				android:src="@drawable/ic_jakartans" />
    
    			<ImageView
    				android:id="@+id/iv_avail"
    				android:layout_width="25dp"
    				android:layout_height="25dp"
    				android:layout_alignBaseline="@+id/iv_jam"
    				android:layout_alignTop="@+id/iv_jam"
    				android:layout_marginLeft="3dp"
    				android:layout_toRightOf="@+id/iv_bus"
    				android:contentDescription="@string/hello_world"
    				android:src="@drawable/ic_jakartans" />
    		</LinearLayout>
    	</LinearLayout>
	</RelativeLayout>

</RelativeLayout>